--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "admhome/SimplestAPI",
+    "name": "admhome/simplestapi",
     "description": "Simplest API for data exchange",
     "authors": [
         {
