--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,8 @@
 {
     "name": "admhome/simplestapi",
     "description": "Simplest API for data exchange",
+    "version": "1.0.0-stable",
+	"license": "MIT",
     "authors": [
         {
             "name": "admhome",
