--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,9 @@
 {
     "name": "admhome/simplestapi",
     "description": "Simplest API for data exchange",
+    "version": "1.0.0",
+    "type": "library",
+    "keywords": ["api", "shop", "crm"],
     "license": "MIT",
     "authors": [
         {
@@ -8,12 +11,19 @@
             "email": "admhome@ya.ru"
         }
     ],
+    "support": {
+        "email": "admhome@ya.ru"
+    },
     "require": {
+        "php": ">=5.3.0"
+    },
+    "require-dev": {
         "php": ">=5.3.0"
     },
     "autoload": {
         "psr-0": {
             "SimplestAPI": "src/"
         }
-    }
+    },
+    "minimum-stability": "stable"
 }
